front-end updates.

--- a/Website/CSWeb/Styles/global.css
+++ b/Website/CSWeb/Styles/global.css
@@ -288,7 +288,6 @@ margin: 0 20px 20px 0;
 .fright {
 float:right;
 margin: 0 0 20px 20px;
-
 }
 
 .bold {
@@ -1042,4 +1041,23 @@ margin-left: 12px;
 	position: absolute;
 	top: 904px;
 	left: 611px;
+}
+
+.printer {
+	position:relative;
+	float:right;	
+	text-decoration: none;
+	color: #515151;
+}
+
+#receipt_content h1, .itemprint {
+	display: none;	
+}
+
+.banner {
+  margin-left: -35px;
+  margin-top: -40px;
+  position: relative;
+  width: 311px;
+  z-index: 1000;
 }
